--- a/futurevalue.html
+++ b/futurevalue.html
@@ -7,6 +7,7 @@
     <script src="future_value.js"></script>
 	<style src="number_pattern></style>
 </head>
+<title> projecta</title>
 <body>
     <main>
         <h1>discount Calculator</h1>
